--- a/finished-map-example.html
+++ b/finished-map-example.html
@@ -19,7 +19,7 @@
     function initMap() {
       var myOptions = {
         zoom: 8,
-        center: {lat: 20, lng: 67},
+        center: {lat: -20.16896162128126, lng: -67.60865293110349},
         mapTypeId: google.maps.MapTypeId.TERRAIN,
         disableDefaultUI: true,
         // Step 4. Customize displayed controls
@@ -34,7 +34,7 @@
       var iconBase = 'https://maps.google.com/mapfiles/kml/shapes/';
 
       var marker = new google.maps.Marker({
-        position: {lat: 20, lng: 67},
+        position: {lat: -20.16896162128126, lng: -67.60865293110349},
         icon: iconBase + 'flag_maps.png',
         map: map
       });
