--- a/finished-map-example.html
+++ b/finished-map-example.html
@@ -41,14 +41,7 @@
 
       // Step 3. Add info window
 
-      var contentString = '<div id="content"><h2 id="firstHeading" class="firstHeading">ボリビア・ウユニ(Bolivia・Uyuni)</h2><p>
-　南米ボリビアの標高約3,700mにある、
-　南北約100km、東西約250km、
-　面積約12,000km2の広大な塩の固まり。
-　日本の四国(18,792km2)の約3分の2に匹敵する広さ。
-　塩原中央付近では、見渡す限りの真っ白な平地で、
-　氷の上か雪原にいるような錯覚すら覚えるという。
-　雨季(12月～3月)には水が張って一面が鏡のようになる。</p></div>';
+      var contentString = '<div id="content"><h2 id="firstHeading" class="firstHeading">ボリビア・ウユニ(Bolivia・Uyuni)</h2><p>南米ボリビアの標高約3,700mにある、南北約100km、東西約250km、面積約12,000km2の広大な塩の固まり。日本の四国(18,792km2)の約3分の2に匹敵する広さ。塩原中央付近では、見渡す限りの真っ白な平地で、氷の上か雪原にいるような錯覚すら覚えるという。雨季(12月～3月)には水が張って一面が鏡のようになる。</p></div>';
 
       var infowindow = new google.maps.InfoWindow({
         content: contentString
